--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Facebook Live</title>
 </head>
 <body>
-    <section class="hero">
+    <section class="hero-section">
         <div class="hero">
             <img class="image-hero" src="https://images.unsplash.com/photo-1485182708500-e8f1f318ba72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1085&q=80" alt="">
             <div class="content-hero">
@@ -21,6 +21,28 @@
                 <div class="button">
                     <p>RSVP</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="join-us-section">
+        <div class="join-us">
+            <div class="text-join-us">
+                <h1>JOIN US!</h1>
+                <p>
+                    Clear your calendar - It's going down on Friday, September 13th at 11 am PST! Facebook is hosting a Global Watch Party on Facebook Live for Interns, University Grads, and future Software Engineers. Share this event with your university colleagues, campus staff, and Professors. We'll go live from the University Recruiting at Facebook page (tune in here). 
+                </p>
+                <p>
+                    This Crush Your Coding Interview Workshop will focus on how to be successful during a Technical Interview. Our engineers will cover:
+                    <ul>
+                        <li>How to walk through an algorithm problem,</li>
+                        <li>How to brainstorm solutions,</li>
+                        <li>How to discuss the problem with your interviewer,</li>
+                        <li>And how to write (and test) code on a whiteboard.</li>
+                    </ul>
+                </p>
+            </div>
+            <div class="img-join-us">
+                <img src="https://images.unsplash.com/photo-1529156069898-49953e39b3ac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="">
             </div>
         </div>
     </section>
