--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <div class="text-join-us">
                 <h1>JOIN US!</h1>
                 <p>
-                    Clear your calendar - It's going down on Friday, September 13th at 11 am PST! Facebook is hosting a Global Watch Party on Facebook Live for Interns, University Grads, and future Software Engineers. Share this event with your university colleagues, campus staff, and Professors. We'll go live from the University Recruiting at Facebook page (tune in here). 
+                    Clear your calendar - It's going down on <strong>Friday, September 13th at 11 am PST!</strong> Facebook is hosting a Global Watch Party on Facebook Live for Interns, University Grads, and future Software Engineers. Share this event with your university colleagues, campus staff, and Professors. We'll go live from the <a href="https://www.facebook.com/UniversityRecruitingatFacebook/" class="link-join-us">University Recruiting at Facebook</a> page (tune in here). 
                 </p>
                 <p>
                     This Crush Your Coding Interview Workshop will focus on how to be successful during a Technical Interview. Our engineers will cover:
-                    <ul>
+                    <ul class="list-join-us">
                         <li>How to walk through an algorithm problem,</li>
                         <li>How to brainstorm solutions,</li>
                         <li>How to discuss the problem with your interviewer,</li>
