--- a/index.html
+++ b/index.html
@@ -46,5 +46,23 @@
             </div>
         </div>
     </section>
+    <section class="workshop-section">
+        <div class="host-workshop">
+            <h1>WORKSHOP HOSTS</h1>
+            <div class="profile-host">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQzvZbKVoMICK1SLQWaswNEyI2nK-JxneC8xE-idOcKejfzxadR-mX7z8_9g" alt="">
+                <h2>Murtadha Al-Tameemi</h2>
+                <p>FACEBOOK, SOFTWARE ENGINEER</p>
+            </div>
+            <div class="profile-host">
+                <img src="https://media.licdn.com/dms/image/C4E03AQFfHRxAnxYVTg/profile-displayphoto-shrink_200_200/0?e=1573084800&v=beta&t=y--OhEEfqxpWEDxETSfBFjMzA-TpjubevXBqi42c3yE" alt="">
+                <h2>Maya Israni</h2>
+                <p>FACEBOOK, SOFTWARE ENGINEER</p>
+            </div>
+        </div>
+        <div class="time-workshop">
+
+        </div>
+    </section>
 </body>
 </html>
